--- a/doc/trex_book_basic.asciidoc
+++ b/doc/trex_book_basic.asciidoc
@@ -2693,9 +2693,9 @@ Full command line reference can be found xref:cml-line[here]
 | name  | description 
 | cap2/dns.yaml     |  simple dns pcap file 
 | cap2/http_simple.yaml     |  simple http cap file 
-| avl/sfr_delay_10_1g_no_bundeling.yaml    |  sfr traffic profile capture from Avalanche - Spirent without bundeling support with RTT=10msec ( a delay machine), this can be used with --ipv6 and --learn-mode
-| avl/sfr_delay_10_1g.yaml |  head-end sfr traffic profile capture from Avalanche - Spirent with bundeling support with RTT=10msec ( a delay machine), it is normalized to 1Gb/sec for m=1
-| avl/sfr_branch_profile_delay_10.yaml      |  branch sfr profile capture from Avalanche - Spirent with bundeling support with RTT=10msec it, is normalized to 1Gb/sec for m=1
+| avl/sfr_delay_10_1g_no_bundeling.yaml    |  EMIX traffic profile capture from Avalanche - Spirent without bundeling support with RTT=10msec ( a delay machine), this can be used with --ipv6 and --learn-mode
+| avl/sfr_delay_10_1g.yaml |  head-end EMIX traffic profile capture from Avalanche - Spirent with bundeling support with RTT=10msec ( a delay machine), it is normalized to 1Gb/sec for m=1
+| avl/sfr_branch_profile_delay_10.yaml      |  branch EMIX profile capture from Avalanche - Spirent with bundeling support with RTT=10msec it, is normalized to 1Gb/sec for m=1
 | cap2/imix_fast_1g.yaml     |  imix profile with 1600 flows normalized to 1Gb/sec.
 | cap2/imix_fast_1g_100k_flows.yaml    |  imix profile with 100k flows normalized to 1Gb/sec.
 | cap2/imix_64.yaml  |  64byte UDP packets profile 
