doc: update release notes
Signed-off-by: Hanoh Haim <hhaim@cisco.com>

--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,6 +26,10 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
+== Release 3.03 ==
+
+* minor bug fixes 
+
 == Release 3.02 ==
 * minor change, build issue with 3.01 for mlx5 driver 
 
