--- a/doc/trex_faq.asciidoc
+++ b/doc/trex_faq.asciidoc
@@ -56,11 +56,11 @@ Cisco systems, Intel, Imperva, Melanox, Vasona networks and much more.
 ==== What are the Stateful and Stateless modes of operation?
 
 ``link:trex_manual.html[Stateful]'' mode is meant for testing networking gear which saves state per flow (5 tuple). Usually this is done by injecting pre-recorded capture files on pairs of interfaces of the device under test, and dynamically changing src/dst IP/port.
-With advance Stateful mode it done by injecting L7 data on top of TCP/UDP potocols 
+With advance Stateful mode it done by injecting L7 data on top of TCP/UDP protocols 
 
 ``link:trex_stateless.html[Stateless]'' mode is meant to test networking gear that does not manage any state per flow (instead operating on a per packet basis). This is usually done by injecting customized packet streams to the device under test.
 
-See this link:trex_stateless.html#_stateful_vs_stateless[in-depth comparisson] for more details.
+See this link:trex_stateless.html#_stateful_vs_stateless[in-depth comparison] for more details.
 
 ==== Can TRex run on an hypervisor with virtual NICS?
 
@@ -357,7 +357,7 @@ Look link:trex_manual.html#_memory_section_configuration[here] for more info.
 
 ==== Loading a big YAML file raise an error  no enough memory for specific pool 2048?
 
-You should increse the pool with that raise an error, for example in case of 2048  
+You should increase the pool with that raise an error, for example in case of 2048  
 
 .example of CFG file
 [source,bash]
